--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>David Sondak</title>
-    <!-- link to main stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/cv">CV</a></li>
-      </ul>
-    </nav>
-    <div class="container">
-      <div class="blurb">
-        <h1>David Sondak</h1>
-          <p>I am a lecturer in the Institute for Applied Computational Science at Harvard University. <a href="/about">Read more about my life...</a></p>
-      </div><!-- /.blurb -->
-    </div><!-- /.container -->
-    <footer>
-    <ul>
-      <li><a href="mailto:dsondak@gmail.com">email</a></li>
-      <li><a href="https://github.com/dsondak">github.com/dsondak</a></li>
-    </ul>
-    </footer>
-  </body>
-</html>
+---
+layout: default
+title: David Sondak
+---
+<div class="blurb">
+  <h1>David Sondak</h1>
+    <p>I am a lecturer in the Institute for Applied Computational Science at Harvard University. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
