Including a research projects page.

--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: David Sondak
 ---
 <div class="blurb">
   <h1>David Sondak</h1>
-    <p>I am a lecturer in the Institute for Applied Computational Science at Harvard University. <a href="/about">Read more about my life...</a></p>
+    <p>I am a Lecturer in the Institute for Applied Computational Science at Harvard University.</p>
 </div><!-- /.blurb -->
