Updating online CV with headers.

--- a/cv/index.html
+++ b/cv/index.html
@@ -103,15 +103,61 @@
                         <!--<h6>Software Engineer Extraordinaire</h6>-->
                         <hr />
                     </header>
-<!--
                     <section>
+<!--
                         <section class="summary">
                             <h6>Summary</h6>
                             <p>Deadline-oriented software engineer with lots of experience.
                                 Solid track record of architecting solutions that exceed client expectations.</p>
                         </section>
+-->
+                        <section class="education">
+                            <h6>Education</h6>
+                            <ol>
+                                <li>
+                                    <div>
+                                        <p class="sanserif">Ph.D., Aeronautical Engineering</p>
+                                        <time>Aug. 2008 - Aug. 2018</time>
+                                    </div>
+                                    <div>
+                                        <span>Rensselaer Polytechnic Institute</span>
+                                        <span></span>
+                                    </div>
+                                    <div>
+                                        <span>Novel Residual-Based Large Eddy Simulation Turbulence Models for Incompressible
+Magentohydrodynamics</span>
+                                        <span></span>
+                                    </div>
+                                    <div>
+                                        <span>Advisor:  Assad A. Oberai</span>
+                                        <span></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div>
+                                        <p class="sanserif">M.S., Applied Mathematics</p>
+                                        <time>Aug. 2008 – May 2011</time>
+                                    </div>
+                                    <div>
+                                        <span>Rensselaer Polytechnic Institute</span>
+                                        <span></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div>
+                                        <p class="sanserif">B.S., Mechanical Engineering</p>
+                                        <time>Aug. 2004 – May 2008</time>
+                                    </div>
+                                    <div>
+                                        <span>Lehigh University</span>
+                                        <span></span>
+                                    </div>
+                                </li>
+                            </ol>
+                        </section>
                         <section class="experience">
-                            <h6>Experience</h6>
+                            <h6>Research Experience</h6>
+<!--
                             <ol>
                                 <li>
                                     <header>
@@ -160,34 +206,33 @@
                                     </ul>
                                 </li>
                             </ol>
+-->
                         </section>
-                        <section class="education">
-                            <h6>Education</h6>
-                            <ol>
-                                <li>
-                                    <div>
-                                        <p class="sanserif">M.S., Human Computer Interaction</p>
-                                        <time>Sept '12 – May '14</time>
-                                    </div>
-                                    <div>
-                                        <span>Massachusetts Institute of Technology</span>
-                                        <span></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div>
-                                        <p class="sanserif">B.S., Computer Science</p>
-                                        <time>Sept '08 – May '12</time>
-                                    </div>
-                                    <div>
-                                        <span>Harvard University</span>
-                                        <span>GPA: 3.91</span>
-                                    </div>
-                                </li>
-                            </ol>
+                        <section class="experience">
+                            <h6>Teaching Experience</h6>
+                        </section>
+                        <section class="awards">
+                            <h6>Honors and Awards</h6>
+                        </section>
+                        <section class="outreach">
+                            <h6>Outreach</h6>
+                        </section>
+                        <section class="professional">
+                            <h6>Professional Service</h6>
+                        </section>
+                        <section class="invited-talks">
+                            <h6>Invited Talks</h6>
+                        </section>
+                        <section class="publications">
+                            <h6>Publications</h6>
+                        </section>
+                        <section class="special-programs">
+                            <h6>Special Programs</h6>
+                        </section>
+                        <section class="posters">
+                            <h6>Posters</h6>
                         </section>
                     </section>
--->
                 </section>
             </section>
         </section>
