Fixing colors on CV buttons.

--- a/cv/index.html
+++ b/cv/index.html
@@ -67,8 +67,8 @@
                             <li><span>Modern Fortran</span></li>
                         </ul>
                     </section>
-<!--
                     <section class="references">
+<!--
                         <h6>References</h6>
                         <address>
                             Jane Doe<br />
@@ -84,8 +84,8 @@
                         </address>
                         <p>Typeset in HTML &amp; CSS<br />
                         See <a href="https://git.io/f4dXp">git.io/f4dXp</a></p>
-                    </section>
 -->
+                    </section>
                 </aside>
                 <section>
                     <header class="name" aria-label="David Sondak">
@@ -111,13 +111,18 @@
                                 Solid track record of architecting solutions that exceed client expectations.</p>
                         </section>
 -->
-                        <button class="collapsible">Education </button>
+                        <!--<button class="mybutton" style="vertical-align:middle"><span>Hover </span></button>-->
+
+                        <button class="collapsible">Education</button>
                         <div class="content">
                             <ol>
                                 <li>
                                     <div>
-                                        <p class="sanserif">Ph.D., Aeronautical Engineering</p>
-                                        <time style="text-align:right">Aug. 2008 - Aug. 2018</time>
+                                        <!--<p class="sanserif" style="font-weight:500;">Ph.D., Aeronautical
+Engineering</p>-->
+                                        <h6>Ph.D., Aeronautical Engineering</h6>
+                                        <!--<time style="text-align:right">Aug. 2008 - Aug. 2018</time>-->
+                                        <h6 style="text-align:right">Aug. 2008 - Aug. 2018</h6>
                                     </div>
                                     <div>
                                         <span>Rensselaer Polytechnic Institute</span>
@@ -135,21 +140,21 @@ Magentohydrodynamics</span>
                                 </li>
                                 <li>
                                     <div>
-                                        <p class="sanserif">M.S., Applied Mathematics</p>
-                                        <time>Aug. 2008 – May 2011</time>
+                                        <h6>M.S., Applied Mathematics</h6>
+                                        <h6>Aug. 2008 – May 2011</h6>
                                     </div>
                                     <div>
-                                        <span>Rensselaer Polytechnic Institute</span>
+                                        <span><h6>Rensselaer Polytechnic Institute</h6></span>
                                         <span></span>
                                     </div>
                                 </li>
                                 <li>
                                     <div>
-                                        <p class="sanserif">B.S., Mechanical Engineering</p>
-                                        <time>Aug. 2004 – May 2008</time>
+                                        <h6>B.S., Mechanical Engineering</h6>
+                                        <h6>Aug. 2004 – May 2008</h6>
                                     </div>
                                     <div>
-                                        <span>Lehigh University</span>
+                                        <span><h6>Lehigh University</h6></span>
                                         <span></span>
                                     </div>
                                 </li>
