Finally fixed formatting for collapsible content.

--- a/cv/index.html
+++ b/cv/index.html
@@ -67,31 +67,13 @@
                             <li><span>Modern Fortran</span></li>
                         </ul>
                     </section>
-                    <section class="references">
-<!--
-                        <h6>References</h6>
-                        <address>
-                            Jane Doe<br />
-                            Alphabet Inc.<br />
-                            (413) 025-1900
-                            jane@janedoe.site
-                        </address>
-                        <address>
-                            Luke O'Connor<br />
-                            Facebook<br />
-                            (413) 125-1400
-                            luke@facebook.site
-                        </address>
-                        <p>Typeset in HTML &amp; CSS<br />
-                        See <a href="https://git.io/f4dXp">git.io/f4dXp</a></p>
--->
-                    </section>
                 </aside>
                 <section>
                     <header class="name" aria-label="David Sondak">
                         <a href="https://dsondak.github.io">
-                            <svg width="257px" height="35px" viewBox="0 0 513 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-family="Montserrat-Regular, Montserrat" font-size="48" font-weight="normal">
+                            <svg width="513px" height="35px" viewBox="0 0 1025 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
+font-family="Montserrat-Regular, Montserrat" font-size="64" font-weight="normal">
                                     <g id="Letter" transform="translate(-54.000000, -140.000000)" fill="#484848">
                                         <text id="David-Sondak">
                                             <tspan x="74.728" y="174">DAVID SONDAK</tspan>
@@ -100,129 +82,41 @@
                                 </g>
                             </svg>
                         </a>
-                        <!--<h6>Software Engineer Extraordinaire</h6>-->
                         <hr />
                     </header>
                     <section>
-<!--
-                        <section class="summary">
-                            <h6>Summary</h6>
-                            <p>Deadline-oriented software engineer with lots of experience.
-                                Solid track record of architecting solutions that exceed client expectations.</p>
-                        </section>
--->
-                        <!--<button class="mybutton" style="vertical-align:middle"><span>Hover </span></button>-->
 
                         <button class="collapsible">Education</button>
                         <div class="content">
                             <ol>
                                 <li>
-                                    <div>
-                                        <!--<p class="sanserif" style="font-weight:500;">Ph.D., Aeronautical
-Engineering</p>-->
-                                        <h6>Ph.D., Aeronautical Engineering</h6>
-                                        <!--<time style="text-align:right">Aug. 2008 - Aug. 2018</time>-->
-                                        <h6 style="text-align:right">Aug. 2008 - Aug. 2018</h6>
-                                    </div>
-                                    <div>
-                                        <span>Rensselaer Polytechnic Institute</span>
-                                        <span></span>
-                                    </div>
-                                    <div>
-                                        <span>Novel Residual-Based Large Eddy Simulation Turbulence Models for Incompressible
-Magentohydrodynamics</span>
-                                        <span></span>
-                                    </div>
-                                    <div>
-                                        <span>Advisor:  Assad A. Oberai</span>
-                                        <span></span>
-                                    </div>
+                                    <header>
+                                        <p class="sanserif">Ph.D, Aeronautical Engineering</p>
+                                        <time>August 2008 – August 2013</time>
+                                    </header>
+                                    <span>Rensselaer Polytechnic Institute</span>
+                                    <ul>
+                                        <li>Advisor:  Assad A. Oberai</li>
+                                        <li>Dissertation:  Novel residual-based large eddy simulation turbulence models for incompressible magnetohydrodynamics</li>
+                                    </ul>
                                 </li>
                                 <li>
-                                    <div>
-                                        <h6>M.S., Applied Mathematics</h6>
-                                        <h6>Aug. 2008 – May 2011</h6>
-                                    </div>
-                                    <div>
-                                        <span><h6>Rensselaer Polytechnic Institute</h6></span>
-                                        <span></span>
-                                    </div>
+                                    <header>
+                                        <p class="sanserif">M.S. Applied Mathematics</p>
+                                        <time>August 2008 - May 2011</time>
+                                    </header>
+                                    <span>Rensselaer Polytechnic Institute</span>
                                 </li>
                                 <li>
-                                    <div>
-                                        <h6>B.S., Mechanical Engineering</h6>
-                                        <h6>Aug. 2004 – May 2008</h6>
-                                    </div>
-                                    <div>
-                                        <span><h6>Lehigh University</h6></span>
-                                        <span></span>
-                                    </div>
+                                    <header>
+                                        <p class="sanserif">B.S. Mechanical Engineering</p>
+                                        <time>August 2004 - May 2008</time>
+                                    </header>
+                                    <span>Lehigh University</span>
                                 </li>
                             </ol>
                         </div>
 
-                        <br><br>
-
-                        <button class="collapsible">Research Experience</button>
-                        <div class="content">
-                          Research experience
-                        </div>
-
-                        <br><br>
-
-                        <button class="collapsible">Teaching Experience</button>
-                        <div class="content">
-                            Teaching Experience
-                        </div>
-
-                        <br><br>
-
-                        <button class="collapsible">Honors and Awards</button>
-                        <div class="content">
-                            Honors and Awards
-                        </div>
-
-                        <br><br>
-
-                        <button class="collapsible">Outreach</button>
-                        <div class="content">
-                            Outreach
-                        </div>
-
-                        <br><br>
-
-                        <button class="collapsible">Professional Service</button>
-                        <div class="content">
-                            Professional Service
-                        </div>
-
-                        <br><br>
-
-                        <button class="collapsible">Invited Talks</button>
-                        <div class="content">
-                            Invited Talks
-                        </div>
-
-                        <br><br>
-
-                        <button class="collapsible">Publications</button>
-                        <div class="content">
-                            Publications
-                        </div>
-
-                        <br><br>
-
-                        <button class="collapsible">Special Programs</button>
-                        <div class="content">
-                            Special Programs
-                        </div>
-
-                        <br><br>
-
-                        <button class="collapsible">Posters</button>
-                        <div class="content">
-                            Posters
-                        </div>
                     </section>
                 </section>
             </section>
