Research experience and starting teaching experience.

--- a/cv/index.html
+++ b/cv/index.html
@@ -67,6 +67,8 @@
                             <li><span>Modern Fortran</span></li>
                         </ul>
                     </section>
+                    <section class="skills">
+                    </section>
                 </aside>
                 <section>
                     <header class="name" aria-label="David Sondak">
@@ -113,6 +115,147 @@ font-family="Montserrat-Regular, Montserrat" font-size="64" font-weight="normal"
                                         <time>August 2004 - May 2008</time>
                                     </header>
                                     <span>Lehigh University</span>
+                                </li>
+                            </ol>
+                        </div>
+
+                        <button class="collapsible">Research Experience</button>
+                        <div class="content">
+                            <ol>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Harvard University</p>
+                                        <time>July 2017 – Present</time>
+                                    </header>
+                                    <span>Lecturer on Computational Science</span>
+                                    <!--<span>Institute for Applied Computational Science</span>-->
+                                    <ul>
+                                        <li>Supervised graduate student research projects in fluid mechanics, data science,
+and machine learning</li>
+                                        <li>Analyzed physics-based machine learning algorithms for turbulence models</li>
+                                        <li>Assessed performance of neural networks for solving differential equations</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">University of Texas at Austin</p>
+                                        <time>January 2016 - July 2017</time>
+                                    </header>
+                                    <span>Postdoctoral Research Fellow in the PECOS Center</span>
+                                    <!--<span>Institute for Computational and Engineering Sciences (now the Odin
+Institute)</span>-->
+                                    <ul>
+                                        <li>Developed stochastic model inadequacy formulations for uncertainty quantification
+in chemical kinetics </li>
+                                        <li>Assessed turbulence model inadequacy for turbulent combustion applications</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">University of Wisconsin-Madison</p>
+                                        <time>August 2013 - January 2016</time>
+                                    </header>
+                                    <span>Van Vleck Visiting Assistant Professor</span><br>
+                                    <span>NSF Research Training Grant Post-Doctoral Research Associate</span>
+                                    <ul>
+                                       <li>Demonstrated working fluid effect on optimal heat transport in Rayleigh-Bénard convection</li>
+                                       <li>Developed algorithms to determine steady-state flows that optimize heat transport</li>
+                                       <li>Developed a code that determines fixed points of the Boussinesq equations</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Rensselaer Polytechnic Institute</p>
+                                        <time>August 2008 - August 2013</time>
+                                    </header>
+                                    <span>DOE SCGF Fellow and Graduate Research Assistant</span>
+                                    <ul>
+                                       <li>Developed residual-based large eddy simulation turbulence models for
+incompressible MHDi</li>
+                                       <li>Tested models in decaying homogeneous, isotropic turbulence with a Fourier spectral numerical method</li>
+                                       <li>Generalized models to the finite element method and implemented in the Drekar code at Sandia</li>
+                                       <li>Outperformed current state-of-the-art turbulence models when comparing energy spectra</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Sandia National Laboratories</p>
+                                        <time>Recurring collaboration visits</time>
+                                    </header>
+                                    <span>Research collaborations</span>
+                                    <ul>
+                                       <li>Implemented new turbulence models into the computational MHD code Drekar</li>
+                                       <li>Performed studies with interesting problems to test the feasibility of the models</li>
+                                       <li>Simulated turbulent channel flow (both MHD and pure hydrodynamics)</li>
+                                       <li>Added capabilities to existing turbulence statistics tools</li>
+                                       <li>Tested spatial and temporal numerical convergence rates of Drekar with new models</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Lehigh University</p>
+                                        <time>June 2007 - June 2008</time>
+                                    </header>
+                                    <span>Undergraduate Research Assistant</span>
+                                    <ul>
+                                       <li>Studied the effects of time delays on the controllability of tokamak plasmas</li>
+                                       <li>Simulated time-delays in axisymmetric control loop of KSTAR tokamak</li>
+                                       <li>Assessed PID controller in controling radial plasma position and plasma current</li>
+                                       <li>Proposed modified Smith predictor as a way to enhance controllability of control loop</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">General Atomics National Fusion Facility</p>
+                                        <time>June 2007 - August 2007</time>
+                                    </header>
+                                    <span>Research Internship</span>
+                                    <ul>
+                                       <li>Collaborated with a research scientist on undergraduate research project that studied time delays in the KSTAR
+                                       tokamak</li>
+                                       <li>Duties involved writing MATLAB and SIMULINK code that performed the tests of the effects of the time delays</li>
+                                       <li>Also responsible for analyzing the data and determining future directions (along with the research scientist and
+                                       undergraduate research advisor)</li>
+                                    </ul>
+                                </li>
+                            </ol>
+                        </div>
+
+                        <button class="collapsible">Teaching Experience</button>
+                        <div class="content">
+                            <ol>
+                                <li>
+                                    <header>
+                                        <p class="sanserif">Harvard University</p>
+                                        <time>July 2017 – Present</time>
+                                    </header>
+                                    <span>Lecturer on Computational Science</span>
+                                    <!--<span>Institute for Applied Computational Science</span>-->
+                                    <ul>
+                                       <li>AC297r — Computational Science and Engineering Capstone Project</li> 
+                                          <ul>
+                                             <li>Semesters taught: Spring 2019</li>
+                                          </ul>
+                                       <p>Recruited four project partners to propose real-world problems for students to solve
+                                       Students work in teams of 3-4 members to address challenges posed by industry and academic partners
+                                       Students present results at end-of-semester poster session open to partners
+                                       </p>
+                                       <li>AC290r — Extreme Computing Semesters taught: Spring 2019</li>
+                                       <p>Project-based course to explore the techniques, infrastructure, and algorithms used for extreme computing
+                                       Students use tools developed at national labs and in academia to perform large-scale simulations</p>
+                                       <li>CS207 — Systems Development for Computational Science </li>
+                                       <p>Semesters taught: Fall 2017, Fall 2018
+                                       Graduate computer science course on software development for computational scientists
+                                       45 - 90 students
+                                       Supervised and managed 3- 5 teaching fellows
+                                       </p>
+                                       <li>CS205 — Computing Foundations for Computational Science</li>
+                                       <p>:Semesters taught: Spring 2018
+                                       Graduate course on parallel computing
+                                       45 students
+                                       Co-taught with Ignacio Llorente
+                                       </p>
+                                    </ul>
                                 </li>
                             </ol>
                         </div>
